--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,5 +33,5 @@ main {
 
   overflow: hidden;
 
-  cursor: url("/mouse1.png"), auto !important;
+  cursor: url("/lele-vacilos/mouse1.png"), auto !important;
 }
